--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,7 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "server": "cd .. && cd SourceCode && python api.py"
+    "server": "cd .. && cd server && python api.py"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
